# mlir-npcomp

./: CMakeLists.txt
.github/workflows/: buildAndTest.yml
torch_mlir/: __init__.py  gen_aten_dialect.py
torch_mlir/core/: aten_mlir_model.py
torch_mlir/csrc/: ATenMLIRBridge.cpp  ATenMLIRBridge.h  ATenMLIRDevice.cpp  ATenMLIRDevice.h  ATenMLIRType.cpp  ATenMLIRType.h  CMakeLists.txt  InitPythonBindings.cpp  MLIRGenerator.cpp  MLIRGenerator.h  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorImpl.h  TorchUtil.cpp  TorchUtil.h  ir.cpp  ir.h  jit.cpp  jit.h
torch_mlir/lib/: aten_ops.cpp
torch_mlir/test/: CMakeLists.txt  arch.json  lit.cfg.py  lit.site.cfg.py.in  test_export_ResA.py  test_export_batchnorm.py  test_export_multi_out.py  test_export_resnet18.py  test_export_vgg11.py  test_jit_add2.py  test_jit_add3.py  test_jit_add_views.py  test_jit_as_stride.py  test_jit_conv2d.py  test_jit_conv2d_back.py  test_jit_lenet_back.py  test_jit_lenet_fwd.py  test_jit_linear.py  test_jit_logsoftmax.py  test_jit_maxpool.py  test_jit_mlp_back.py  test_jit_mm.py  test_jit_mul2.py  test_jit_nllloss.py  test_jit_relu.py  test_jit_t.py  test_op_report_conv2d.py  test_op_report_vgg_style_lenet.py
